client/stylesheets/app.styl
@import '../../node_modules/material-design-lite/dist/material.css'
@import '../../node_modules/gridster/dist/jquery.gridster.min.css'
@import 'material_icons.css'

@import '_variables'
@import '_mixins'

@import 'styles.css'

.unselectable
  -moz-user-select: none
  -khtml-user-select: none
  -webkit-user-select: none
  -webkit-touch-callout: none
  -ms-user-select: none
  user-select: none

// your styles here:
body
  background: white

// datatable
div.table
  overflow-x: scroll

.fullwidth
  width: 100%

.mdl-text-field
  font-size: large


// image card:
// https://www.getmdl.io/components/index.html#cards-section

.fileBtn
  position: absolute
  left: 0
  top: 0
  clip: rect(0px 0px 0px 0px)

.card-wide > .mdl-card__title
  color: #fff
  height: 176px

.card-wide > .mdl-card__menu
  color: #fff

.activeFacet
  color: rgb(63,81,181)
  border: 2px solid
  margin-top: 3px
  margin-bottom: 3px

.mdl-card__media
  background-color: white

.mdl-card__actions
  background-color: white

.activeFacet
  .mdl-card__actions
    position: absolute
    bottom: 0

.inactiveFacet
  .mdl-card__actions
    position: absolute
    bottom: 0

.mdl-card__menu
  background-color: white

.analyzeMain
  overflow-y: scroll

.widgetOuterFrame
  position: absolute

.widgetFrame
  width: 100%
  height: 100%
  position: absolute
  left: 0
  top: 0
  flex: 1
  display: flex
  flex-direction: column
  align-items: stretch
  overflow-x: hidden
  overflow-y: hidden
  
.plotMenu
  z-index: 30
  position: absolute

.configView
  background: rgba(255,255,255,0.75)
  background-size: 85% 85%
  z-index: 20
  position: absolute
  top: 0
  left: 0
  width: 100%
  height: 100%
  display: flex
  flex-direction: column
  overflow-y: auto
  overflow-x: hidden

.widgetView
  position: absolute
  top: 0
  left: 0
  width: 100%
  height: 100%

.partitionDrop
  width: 100%
  height: 40%
  border-top: 2px dotted

.mdl-chip
  margin-left: 2px
  margin-right: 2px

.aggregateDrop
  width: 100%
  height: 40%
  border-top: 2px dotted

.widgetView
  display: flex
  align-items: stretch
  flex-grow: 1

.widgetActions
  flex-grow: 0

.partitionList
  width: 45%
  position: absolute
  bottom: 0
  left: 0

.aggregateList
  width: 45%
  position: absolute
  bottom: 0
  right: 0

.demo-avatar
  background: url('images/nlesc.svg')

.homeCard
  display: flex
  align-items: center
  justify-content: center

.jsonupload
  background: lightblue url('images/JSON.svg') no-repeat center
  background-size: contain

.serverupload
  background: lightblue url('images/PostgreSQL_logo.3colors.svg') no-repeat center
  background-size: contain

.csvupload
  background: lightblue url('images/CSV.svg') no-repeat center
  background-size: contain

.sessionupload
  background: lightblue url('images/upload.svg') no-repeat center

.sessiondownload
  background: lightblue url('images/download.svg') no-repeat center

.searchBar
  border-radius: 1em
  padding: 2px

.facetDescription
  @extends .unselectable
  flex: 1

.widgetInner
  width: 100%

.chartBar
  border-bottom: 1px dotted
  border-top: 1px dotted 
  display: flex
  flex-direction: row
  justify-content: center

.chartBarText
  @extends .unselectable
  text-align: center
  align-self: center
  width: 10em

.widgetIcon
  background-size: contain
  flex: 1
  width: 3em
  height: 3em

.chartIcon
  background-repeat: no-repeat
  background-position: center
  background-blend-mode: lighten

.horizontalbarchartIcon
  @extends .chartIcon
  background-image: url('images/horizontal-bar-chart.svg')

.barchartIcon
  @extends .chartIcon
  background-image: url('images/bar-chart.svg')

.linechartIcon
  @extends .chartIcon
  background-image: url('images/line-chart.svg')

.piechartIcon
  @extends .chartIcon
  background-image: url('images/pie-chart.svg')

.bubbleplotIcon
  @extends .chartIcon
  background-image: url('images/bubble-chart.svg')

.radarchartIcon
  @extends .chartIcon
  background-image: url('images/radar-chart.svg')

.plotly3dchartIcon
  @extends .chartIcon
  background-image: url('images/plotly-3d-chart.svg')

.networkchartIcon
  @extends .chartIcon
  background-image: url('images/network-chart.svg')

.slots
  flex-grow: 1
  display: flex
  flex-direction: row
  flex-wrap: wrap
  justify-content: space-around
  align-items: flex-start
  align-content: flex-start
  margin-left: 5%
  margin-right: 5%

.slot
  flex: 1
  margin: 1em
  margin-top: 1em
  margin-bottom: 1em
  padding: 0.5em
  display: flex
  justify-content: space-between
  background-color: white

.slot:active
  background-color: rgb(200,200,200)

.slotText
  flex: 1

.slotChip
  flex: 1
  margin-left: 1em
  min-width: 5em
  font-size: x-large
  display: flex
  align-items: center

.slotButton
  display: flex
  align-items: center

.facetIcon
  flex: 1
  width: 10em
  height: 10em
  background-size: contain
  background-repeat: no-repeat
  background-position: right center

.facetIcon--small
  width: 64px
  height: 64px
  margin-right: 32px
  background-repeat: no-repeat
  background-position: right center

.facetInfoIcon
  background-image: url('images/facet-info.svg')

.facetTypeIcon
  background-image: url('images/facet-type.svg')

.facetBaseValueIcon
  background-image: url('images/facet-basevalue.svg')

.facetDatetimeIcon
  background-color: white
  background-image: url('images/facet-datetime.svg')

.facetDurationIcon
  background-color: white
  background-image: url('images/facet-duration.svg')

.facetTextIcon
  background-color: white
  background-image: url('images/facet-text.svg')

.facetContinuousIcon
  background-color: white
  background-image: url('images/facet-continuous.svg')

.facetCategorialIcon
  background-color: white
  background-image: url('images/facet-categorial.svg')

.facetReductionIcon
  background-image: url('images/facet-reduction.svg')

.facetReductionPercentageIcon
  background-image: url('images/facet-reduction-percentage.svg')

.facetBar
  height: inherit
  min-height: 64px
  display: flex
  flex-direction: row
  justify-content: center
  padding: inherit
  align-items: center

.facetBarItems
  width: 95%
  display: flex
  flex-direction: row
  flex-wrap: wrap

.facetBarText
  @extends .unselectable
  text-align: center
  align-self: center
  width: 10em

.widgetDragBar
  flex-grow: 0
  display: flex
  align-items: center
  cursor: move
  background-color: rgb(230,230,230)

.dragBarText
  flex: 1
  text-align: center

.sigmajs
  top: 0
  bottom: 0
  left: 0
  right: 0
  position: absolute

.gs-resize-handle-both
  background-size: cover
  width: 4em
  height: 4em
  z-index: 100

